--- a/src/pages/Login/LoginStyle.css
+++ b/src/pages/Login/LoginStyle.css
@@ -32,8 +32,8 @@
 
 .tombol {
   width: 116px;
-  background: #203756;
-  border-color: #203756;
+  background: #203756!important;
+  border-color: #203756!important;
 }
 
 .judul {
@@ -47,4 +47,91 @@
   color: #9a9ea7;
   font-size: 14px;
   margin-top: 5px;
+}
+
+.SignInBtn {
+  margin: 12px 0;
+  height: 50px;
+  width: 100%;
+  background: #78c2b4;
+  border-radius: 10px;
+  border: none;
+  font-weight: 600;
+  color: white;
+}
+
+.SignInBtn:hover {
+  background: #78c2b4;
+}
+
+.Line {
+  border: 1px solid #ececf2;
+  height: 1px;
+  width: 40%;
+}
+
+.Flex {
+  display: flex;
+  width: auto;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Flex span {
+  border: none;
+  background: none;
+}
+
+.wrapper {
+  height: auto;
+  background: #ffffff;
+  border: 1px solid #e4e6e8;
+  box-sizing: border-box;
+  border-radius: 8px;
+  padding: 4px 12px;
+  margin-bottom: 12px;
+}
+
+.wrapper p {
+  text-align: left;
+  padding: 0.375rem 0.75rem;
+  font-size: 12px;
+  margin-bottom: -8px;
+  color: #9a9ea7;
+}
+
+.wrapper input {
+  border: none;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  background: none;
+}
+
+.wrapper input:focus {
+  border: none;
+  background: none;
+  box-shadow: none;
+}
+
+.wrapper span {
+  background: none;
+  border: none;
+}
+
+.clearPass{
+  cursor: pointer;
+}
+
+.TypoBold{
+  margin: auto 0;
+  font-weight: 600;
+  color: #0D0A19;
+  font-size: 14px;
+}
+
+.typo {
+  margin: auto;
+  color: #9a9ea7;
+  font-size: 14px;
 }
