--- a/src/pages/RegisterLogin/Style.css
+++ b/src/pages/RegisterLogin/Style.css
@@ -2,6 +2,16 @@ a:hover {
   text-decoration: none !important;
 }
 
+.con {
+  width: 70%;
+}
+
+@media screen and (max-width: 1023.75px) {
+  .con {
+    width: 100%;
+  }
+}
+
 .card {
   border: 0 !important;
 }
@@ -9,8 +19,15 @@ a:hover {
 .bg {
   background: #203756;
   position: static;
+  height: 100%;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+}
+
+.bg-mobile {
+  background: #7963f0;
+  position: static;
+  height: 100%;
 }
 
 .body-card {
@@ -22,6 +39,15 @@ a:hover {
 .card-image {
   mix-blend-mode: luminosity;
   opacity: 0.49;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.card-image-mobile {
+  mix-blend-mode: luminosity;
+  opacity: 0.6;
+  width: 100vw;
+  height: 100vh;
 }
 
 .title {
@@ -47,10 +73,33 @@ a:hover {
   margin-bottom: 0px;
 }
 
+.judul-mobile {
+  font-weight: bold;
+  font-size: 28px;
+  color: #0d0a19;
+}
+
 .sub-judul {
   color: #9a9ea7;
   font-size: 14px;
   margin-top: 5px;
+}
+
+.sub-judul-mobile {
+  font-weight: normal;
+  font-size: 14px;
+  color: #9a9ea7;
+}
+
+.sj{
+  width: 410px;
+}
+
+@media screen and (max-width: 1023.75px) {
+  .sj {
+    width: auto;
+    margin-bottom: 20vh;
+  }
 }
 
 .sign-btn {
@@ -66,6 +115,12 @@ a:hover {
 
 .sign-btn:hover {
   background: #78c2b4;
+}
+
+@media screen and (max-width: 1023.75px) {
+  .sbm{
+    margin-bottom: 20vw;
+  }
 }
 
 .line {
@@ -138,4 +193,33 @@ a:hover {
   margin: auto;
   color: #9a9ea7;
   font-size: 14px;
+}
+
+.splash {
+  position:fixed;
+  bottom: 0;
+  z-index: 999;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  padding-bottom: 5vw;
+}
+
+.splash-text {
+  color: #9a9ea7;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.splash-signup {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  color: #7963f0;
+}
+
+.splash-signin {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  color: #0d0a19;
 }
